# ascal

./: .gitignore  README.md  ascal.py  autoscalers - new.py  autoscalers.py  helper.py  nodestates.py  pyproject.toml  recycling.py  requirements.txt  requirements_dev.txt  setup.py  timedops.py  transition.py
ascal/: __init__.py  ascal.py  ascalconfig.py  autoscalers.py  helper.py  hreactive.py  hreactivehvpredictive.py  hreactivehvreactive.py  hvpredictive.py  hvreactive.py  nodestates.py  recycling.py  timedops.py  transition.py
ascal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: trace-triangle.csv
examples/ex1/: config.yaml  cost.csv  ex1.ipynb  ex1.py  performances.csv  workloads.csv
examples/pub1/: config_fcma_predictive-baseline.yaml  config_fcma_predictive.yaml  config_fcma_predictive_1h-baseline.yaml  config_fcma_predictive_1h.yaml  config_fcma_reactive-baseline.yaml  config_fcma_reactive.yaml  config_fcma_reactive_1h-baseline.yaml  config_fcma_reactive_1h.yaml  config_hpa_ca.yaml  config_hpa_ca_1h.yaml  config_hpa_ca_fcma_predictive.yaml  config_hpa_ca_fcma_predictive_1h.yaml  config_hpa_ca_fcma_predictive_upgrade.yaml  config_hpa_ca_fcma_reactive-baseline.yaml  config_hpa_ca_fcma_reactive.yaml  config_hpa_ca_fcma_reactive_1h-baseline.yaml  config_hpa_ca_fcma_reactive_1h.yaml  config_hpa_ca_fcma_reactive_upgrade.yaml  pub1.ipynb  pub1_new.ipynb
perf/: ascal_perf_pub1.csv  ascal_perf_tests.csv  ascalperf.ipynb  aws_eu_west_1_c5m5r5.py  exp-hpa-ca-hv-predictive-fcma.yaml  exp-hpa-ca-hv-reactive-fcma.yaml  exp-hpa-ca.yaml  exp-hv-predictive-fcma.yaml  exp-hv-reactive-fcma.yaml  experiments.ipynb  hungarianperf.py  hungarianperfplot.ipynb  recyclingperf.py  recyclingperfplot.ipynb  trapezoid.csv
tests/: readme.txt
traces/: step_0_100_0.csv  trace-app0-24h-rand-10.csv  trace-app1-24h-rand-10.csv  trace-app2-24h-rand-10.csv  trace-app3-24h-rand-10.csv  trace-app4-24h-rand-10.csv  trapezoid.csv
(+62 files in other folders)
