[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascal"
version = "0.1.0"
description = "Simulate different H/HV and reactive/predictive autoscaling algorithms of containers"
authors = [
    { name="Jose Maria Lopez Lopez", email="chechu@uniovi.es" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fcma",
    "matplotlib>=3.10.3",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.12"

[tool.uv.sources]
fcma = { git = "https://github.com/asi-uniovi/fcma.git" }

[tool.hatch.build.targets.wheel]
packages = ["examples"]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]
