[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascal"
version = "0.1.0"
description = "Simulate different H/HV and reactive/predictive autoscaling algorithms of containers"
authors = [
    { name="Jose Maria Lopez Lopez", email="chechu@uniovi.es" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fcma",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.3",
    "pyyaml>=6.0.2",
    "scipy>=1.16.0",
    "numpy>=1.26.4",
]
requires-python = ">=3.12"

[tool.uv.sources]
fcma = { git = "https://github.com/asi-uniovi/fcma.git" }

[tool.hatch.build.targets.wheel]
packages = ["examples"]

[dependency-groups]
dev = [
    "pandas>=2.3.1",
    "pytest-cov>=6.2.1",
]
